# brew-parser

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  brew-update-notes.txt  brew_parser.py  future-todo.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_brew_parser.py
examples/: changes-example.json  markdown-example.md  table-example.html  table-example.txt
memory/: project-state.md  quick-reference.md
scripts/: generate_examples.py
